--- a/tasks/archlinux/install_xfce.yml
+++ b/tasks/archlinux/install_xfce.yml
@@ -13,6 +13,6 @@
     name: "{{ item }}"
     state: present
   with_items:
-    - "{{ xfce_xfwm4_themes_pkg }}"
-    - "{{ xfce_numix_themes_pkg }}"
+    - "{{ xfce_xfwm4_archlinux_pkg }}"
+    - "{{ xfce_numix_archlinux_pkg }}"
   when: xfce_extra_pkg == true and ansible_os_family == "Archlinux"
