--- a/tasks/common/configure_xfce.yml
+++ b/tasks/common/configure_xfce.yml
@@ -1,4 +1,10 @@
 ---
+- name: Ensure .config/xfce4/terminal dir exists
+  file:
+    path: "{{ ansible_env.HOME }}/.config/xfce4/terminal"
+    state: directory
+    recurse: yes
+
 - name: Copy xfce terminalrc file
   template:
     src: ../../templates/common/xfce4-terminalrc.j2
